# atcoder-solutions

./: .gitignore  LICENSE  README.md  flake.nix  justfile  mise.toml  taplo.toml  yamlfmt.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml  justfile  mise.toml  rust-toolchain.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-0508ce53f81f6a9468fbd5234257bdadf8daa0292d4899e421245727f15b2c18.json  query-0ddba38ba89bd4f847a2dc0fe0cedd7008a45adbf2adbef1aeea3f9ec671a991.json  query-0e3a2e4f5256a8e48696abf7845896ab5241a2705c99133d76eda8f50ec046cf.json  query-0f7204232ed1a45c35cd85ba93fe8a2e32467b098b85873d2b50b848db14a195.json  query-105f6b1b8267e36651a150d97c79740447a786127d0131ae88443ee6e2caef3e.json  query-11fbdfb3400b42661b50434f4cb80059634e8b59a9694e047566d4b79984bf7b.json  query-154c6d6c12532e3d22afee5a2a7aa4bd1ef9dea2ec5afb2d9ca0d836b5bc16aa.json  query-1657d5b3445e3c74ee832749985b773ffdc2850e78d9636c12a365e764d9b032.json  query-1848ae46335bd265af432938e8c841c6e1d5dd0471c674b7305c6017ce46e150.json  query-1a67a67ae52633fb4e6a8196e3c390a7ae642011c9e415141719c8dff7633da0.json  query-1f9ecb46109837952aba48774c9c8464aff1980b6661ddb8a2b199e385963ff5.json  query-208fb75700812ac145ebf1a0fdb61b43881ad49781d3293eb59de4e5afd60299.json  query-233c8ae42dee0c64276667bde5a1837735e702815b335ed5a197ab56d6f16cc3.json  query-26c70b09d478c3f50581c866a5158834dbe36b33c14445e44bd12507bab8a5d5.json  query-31d61cc4baa4fa94a90b81632fdb6e6f105ca9eb0baedb962d1e7781fa3ab760.json  query-33818e640d80785260c4afdb4945cb54ecac51ce138d53743de4d0afcb2d8ad5.json  query-3513878621c58872e56e0f7838a9585d47c87f00f83d36a05024b33e30bbe324.json  query-3558e0f185be3e23b9a2afc6461ab24c8d42853d46f03bde4db2fbfbb05bb6ad.json  query-3559084120fa2b4e62314dc0f3eff3f40503a9bff09d908a1f47bdc9204eab47.json  query-3f0de60f1e4cb21ecabf101c7a318a2825ad065ac39445844d0241b8e5a6e430.json  query-48fed95fb7036d8d337b7dc812b3902b4a2d3e6934c24d768ed61cfd80f4ff2b.json  query-4bbf1174ca88aed3d0f6410f2aeb748c1567c4d9a00ad25f6c75916423678f0a.json  query-4d61445b247f9344f1b437d42cd0a4d5e96c0f029023c36d154a1f0fd50a5a15.json  query-52412fc71e160b65500a3fd8fcef4e775b1d53ef25ee020f9c282b1fd6dda6bd.json  query-57c81799c1d0df97fb973ae6bd472fd8e3e969cb8fbcbeee431d19c22be5ab59.json  query-5c52fe0e74ea0008a1cd1690e4fd0c045cef6b5f9b421b46d9aa686210b3a102.json  query-603f20385b615e21b25a089630e6c0d6efd08ed88a627f2a05b3dca7fe0bfd97.json  query-60accb16ffce861d9134faaa4e77d40fca439e42ea576ff03f397be194115c1e.json  query-62d190a88e75dbfbb2551db5fc297d92209e8a6f0958d64738333d5d439b8c13.json  query-6a8953f1d1237784c68f27abc758a12bbff3a2495c5288212ca6af80004045ae.json  query-6abd257a0fc21ac465839d9c58045ce454fa838978d9049b9605947f679180b3.json  query-6b351656732475c1a00df4359f3a8b893bb4d0a413ecf23ff7ca597b51fb5631.json  query-6ea5f5cd7012b7e5733592fd0720e628939db2b981961642e969f64658d5f550.json  query-711bce82029a328eb070fa76ab76d1cf50791bd7c78ac4ef84786eaa11c7e923.json  query-7260211a484ab9807418016967efa9f7c860d165942e037da2c349ba1e630874.json  query-7876471faa7599093883b595db6599f863a8518e699fec26776e726f010fdabe.json  query-8e319829f2e930393fea81619ff882c14129525d8d759b4653e5903ae27301d2.json  query-8fa21332f80109c0656f9f98e6ed9216f1247e3141939bd18eedd8fc713859ad.json  query-92a3b062b29d47c160aa53faca332b8dfcc48f40d15fa1d781f639e3b2b613ce.json  query-96daf107250c2ba3d9d4bfad9e26ed82be1fe636462d4d0570149e51ab547b91.json  (+13 more)
backend/api/: Cargo.toml
backend/api/src/handler/: version.rs
backend/api/src/model/: version.rs
backend/api/src/route/: health.rs  version.rs
backend/data/: initial_setup.sql
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs
backend/domain/src/error/: external.rs  repository.rs
backend/domain/src/model/: mod.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/migrations/: 20251011020532_create_problems_table.down.sql  20251011020532_create_problems_table.up.sql  20251013141553_create_users_table.down.sql  20251013141553_create_users_table.up.sql  20251014092825_add_user_column.down.sql  20251014092825_add_user_column.up.sql  20251031010036_create_solutions_table.down.sql  20251031010036_create_solutions_table.up.sql  20251103133523_add_solution_column.down.sql  20251103133523_add_solution_column.up.sql  20251104142252_change_solutions_column.down.sql  20251104142252_change_solutions_column.up.sql  20260102014618_drop_user_column.down.sql  20260102014618_drop_user_column.up.sql  20260212000000_create_solution_votes_table.down.sql  20260212000000_create_solution_votes_table.up.sql  20260213000100_create_comments_table.down.sql  20260213000100_create_comments_table.up.sql  20260222000000_add_token_revoked_before_to_users.down.sql  20260222000000_add_token_revoked_before_to_users.up.sql  20260301000000_init_schema.down.sql  20260301000000_init_schema.up.sql  20260301000001_seed_master.down.sql  20260301000001_seed_master.up.sql  20260312000000_add_problem_difficulty.down.sql  20260312000000_add_problem_difficulty.up.sql  20260630000000_add_awc_contest_series.down.sql  20260630000000_add_awc_contest_series.up.sql  20260630002000_drop_problem_contest_index_unique.down.sql  20260630002000_drop_problem_contest_index_unique.up.sql  20260630003000_add_problem_contest_code_index.down.sql  20260630003000_add_problem_contest_code_index.up.sql
backend/infrastructure/src/: error.rs  lib.rs
backend/infrastructure/src/client/: atcoder_problems.rs
backend/infrastructure/src/database/: mod.rs
backend/infrastructure/tests/: common.rs  problem_integration.rs  solution_integration.rs  user_integration.rs
backend/interface/: Cargo.toml
backend/interface/src/: error.rs  lib.rs
backend/registry/: Cargo.toml
backend/registry/src/: lib.rs
backend/shared/: Cargo.toml
backend/shared/src/: config.rs  env.rs  lib.rs  response.rs
backend/src/: lib.rs
backend/tests/fixtures/: problems.json
backend/usecase/: Cargo.toml
backend/usecase/src/: lib.rs
backend/usecase/tests/: problem.rs  solution.rs  solution_authorization.rs  solution_validation.rs  user.rs
(+374 files in other folders)
