[package]
name = "backend"
edition.workspace = true
publish.workspace = true
version.workspace = true

[[bin]]
name = "app"
path = "src/bin/main.rs"

[workspace]
members = ["api"]

[workspace.package]
edition = "2024"
publish = false
version = "0.1.0"

[workspace.dependencies]
api = {path = "./api"}

anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "cors", "request-id"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[dependencies]
api.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-error.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rstest = "0.26.1"
