[package]
name = "infrastructure"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
domain.workspace = true
shared.workspace = true
async-trait.workspace = true
reqwest.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock.workspace = true
rstest.workspace = true
