[package]
name = "infrastructure"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
domain.workspace = true
shared.workspace = true
async-trait.workspace = true
derive-new.workspace = true
reqwest.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
base64.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
wiremock.workspace = true
rstest.workspace = true
anyhow.workspace = true
