[package]
edition.workspace = true
name = "infrastructure"
publish.workspace = true
version.workspace = true

[dependencies]
domain.workspace = true
shared.workspace = true
usecase.workspace = true

async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
derive-new.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest.workspace = true
wiremock.workspace = true
