[package]
name = "interface"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
domain.workspace = true
registry.workspace = true
shared.workspace = true
usecase.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
