[package]
name = "usecase"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
domain.workspace = true
shared.workspace = true
derive-new.workspace = true
thiserror.workspace = true
itertools.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
