[package]
edition.workspace = true
name = "usecase"
publish.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derive-new.workspace = true
domain.workspace = true
itertools.workspace = true
shared.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
